--- a/style.css
+++ b/style.css
@@ -9,19 +9,47 @@
 header {
 
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: space-between;
     background-color: #468132;
     height: 200px;
     padding-left: 450px;
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.25);
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
 
 }
 
 h1 {
 
-    width: 100px;
-    font-size: 80px;
+    text-shadow: 2px 0 #000000;
+    font-size: 70px;
     font-weight: 900;
+    text-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
+
+}
+
+#line {
+
+    height: 150px;
+    width: 13px;
+    background-color: black;
+    border-radius: 5px;
+    margin: 10px;
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
+
+}
+
+div {
+
+    display: flex;
+    width: 230px;
+    align-items: center;
+
+}
+
+nav {
+
+    margin-left: 5vw;
+    width: 2000px;
 
 }
 
@@ -41,11 +69,13 @@ li {
     border-radius: 15px;
     width: 300px;
     height: 75px;
-    margin: 1%;
+    margin: 0.4vw;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 40px;
+    text-shadow: 2px 0 #000000;
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
 
 }
 
@@ -63,7 +93,7 @@ span {
     border-radius: 50%;
     left: -170px;
     top: -170px;
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.25);
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
 
 }
 
