--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
     box-sizing: border-box;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
+    overflow-x: hidden;
+
+}
+
+body {
+
+    display: flex;
+    flex-wrap: wrap;
 
 }
 
@@ -13,43 +21,28 @@ header {
     justify-content: space-between;
     background-color: #468132;
     height: 200px;
+    width: 100vw;
     padding-left: 450px;
-    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
 
 }
 
 h1 {
 
-    text-shadow: 2px 0 #000000;
+    text-shadow: 1px 0 #000000;
     font-size: 70px;
     font-weight: 900;
     text-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
+    width: 525px;
 
 }
 
 #line {
 
     height: 150px;
-    width: 13px;
+    width: 20px;
     background-color: black;
     border-radius: 5px;
-    margin: 10px;
     box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
-
-}
-
-div {
-
-    display: flex;
-    width: 230px;
-    align-items: center;
-
-}
-
-nav {
-
-    margin-left: 5vw;
-    width: 2000px;
 
 }
 
@@ -63,23 +56,23 @@ ul {
 
 li {
 
-    flex-basis: 46%;
+    flex-basis: 48%;
     background-color: #BDFCA7;
     text-align: center;
     border-radius: 15px;
-    width: 300px;
+    width: 46vw;
     height: 75px;
     margin: 0.4vw;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 40px;
-    text-shadow: 2px 0 #000000;
+    text-shadow: 1px 0 #000000;
     box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
 
 }
 
-img {
+span > img {
 
     position: absolute;
     left: 130px;
@@ -122,5 +115,42 @@ span {
     width: 570px;
     z-index: 1;
     
+
+}
+
+aside {
+
+    background-color: #468132;
+    width: 386px;
+    height: 2000px;
+
+}
+
+main {
+
+    background-color: #F4FFC6;
+    width: calc(100% - 386px);
+    height: 2000px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 100px;
+    row-gap: 1em;
+
+}
+
+article {
+
+    height: 20vw;
+    width: 60%;
+    background-color: #EC9D03;
+    border-radius: 15px;
+
+}
+
+main > img {
+
+    height: 20vw;
+    border-radius: 15px;
 
 }
