--- a/Gallery/gallery.css
+++ b/Gallery/gallery.css
@@ -4,6 +4,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
     overflow-x: hidden;
+    user-select: none;
 
 }
 
@@ -37,12 +38,17 @@ header > h1 {
 
     font-size: 70px;
     font-weight: 900;
-    text-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
-    width: 525px;
+    min-width: 200px;
 
 }
 
-#line {
+a {
+
+    font-size: 2vw;
+
+}
+
+.vertical_line {
 
     height: 150px;
     width: 20px;
@@ -68,7 +74,7 @@ li {
     border-radius: 15px;
     width: 46vw;
     height: 75px;
-    margin: 0.4vw;
+    margin: 0.3vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -124,34 +130,11 @@ span {
 
 }
 
-aside {
-
-    background-color: #468132;
-    width: 386px;
-    height: 3000px;
-
-}
-
-main {
-
-    background-color: #F4FFC6;
-    width: calc(100% - 386px);
-    height: 3000px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding-top: 50px;
-    padding-left: 100px;
-    padding-right: 100px;
-
-}
-
 footer {
 
     display: flex;
     background-color: #A16262;
     width: 100%;
-    height: 150px;
     align-items: center;
     justify-content: center;
 
@@ -159,15 +142,15 @@ footer {
 
 footer > img {
 
-    width: 5vw;
+    width: 6vw;
 
 }
 
 footer > p {
 
     text-align: center;
-    font-size: 0.75vw;
+    font-size: 1vw;
     font-weight: 900;
-    width: 5vw;
+    width: 6vw;
 
 }
