--- a/Gallery/gallery.css
+++ b/Gallery/gallery.css
@@ -42,12 +42,6 @@ header > h1 {
 
 }
 
-a {
-
-    font-size: 2vw;
-
-}
-
 .vertical_line {
 
     height: 150px;
@@ -78,7 +72,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 40px;
+    font-size: 3em;
     font-weight: 900;
     box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
 
@@ -134,25 +128,17 @@ main {
 
     display: flex;
     flex-wrap: wrap;
+    background-color: #F4FFC6;
+    justify-content: space-evenly;
 
 }
 
 main > img {
 
-    height: 550px;
-    border: 10px solid #F4FFC6;
-
-}
-
-#img_1, #img_4, #img_7 {
-
-    flex-basis: 34%;
-
-}
-
-#img_2, #img_3, #img_5, #img_6, #img_8, #img_9 {
-
-    flex-basis: 33%;
+    height: 16vw;
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
+    margin: 40px;
+    border-radius: 15px;
 
 }
 
