--- a/Terrarium/terrarium.css
+++ b/Terrarium/terrarium.css
@@ -205,12 +205,18 @@ main > h1 {
 
 }
 
-main > img {
+main > article {
 
-    height: 18vw;
+    width: 70%;
+    height: 1100px;
+    background-color: white;
     border-radius: 15px;
-    margin: 40px;
-    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
+
+}
+
+#short {
+
+    flex-basis: 50%;
 
 }
 
@@ -218,6 +224,7 @@ article {
 
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
     width: 55%;
     background-color: #EC9D03;
@@ -228,16 +235,18 @@ article {
 
 }
 
-article > h2 {
-
-    font-size: 2vw;
-    margin-bottom: 10px;
-
-}
-
 article > p {
 
     font-size: 1vw;
+
+}
+
+article > img {
+
+    height: 400px;
+    border-radius: 15px;
+    margin: 40px;
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
 
 }
 
