--- a/Terrarium/terrarium.css
+++ b/Terrarium/terrarium.css
@@ -208,7 +208,7 @@ main > h1 {
 main > article {
 
     width: 70%;
-    height: 1100px;
+    height: max-content;
     background-color: white;
     border-radius: 15px;
 
@@ -238,26 +238,16 @@ article {
 article > p {
 
     font-size: 1vw;
+    margin: 40px;
 
 }
 
 article > img {
 
-    height: 400px;
+    height: 14vw;
     border-radius: 15px;
     margin: 40px;
     box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
-
-}
-
-table {
-
-    width: 90%;
-    height: 800px;
-    background-color: white;
-    border-radius: 15px;
-    margin-top: 40px;
-    margin-bottom: 40px;
 
 }
 
