--- a/Online/online.css
+++ b/Online/online.css
@@ -152,6 +152,7 @@ aside > article > h3 {
 
     font-size: 1.75em;
     margin: 10px;
+    text-align: center;
 
 }
 
@@ -165,7 +166,7 @@ aside > article > p {
 .horizontal_line {
 
     height: 5px;
-    width: 150px;
+    width: 200px;
     background-color: black;
     border-radius: 5px;
     box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
@@ -179,6 +180,8 @@ aside > img {
     padding: 0px;
     flex-basis: 80%;
     border-radius: 15px;
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
+    object-fit: cover;
 
 }
 
@@ -198,10 +201,10 @@ main > h1 {
 
     display: flex;
     width: 100%;
-    font-size: 4.5em;
+    font-size: 3.5vw;
     justify-content: center;
     align-items: center;
-    margin: 40px;
+    margin: 80px;
 
 }
 
