--- a/Terrarium/terrarium.css
+++ b/Terrarium/terrarium.css
@@ -204,7 +204,7 @@ main > h1 {
     font-size: 3.5vw;
     justify-content: center;
     align-items: center;
-    margin: 80px;
+    margin: 1.5vw;
 
 }
 
@@ -241,7 +241,7 @@ article {
 article > p {
 
     font-size: 1vw;
-    margin: 40px;
+    margin: 20px;
 
 }
 
