--- a/Online/online.css
+++ b/Online/online.css
@@ -75,6 +75,7 @@ li {
     font-size: 3em;
     font-weight: 900;
     box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
 
 }
 
@@ -247,8 +248,83 @@ article > p {
 
 form {
 
-    min-height: 1000px;
-    margin: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+form > * {
+
+    font-size: 0.5vw;
+
+}
+
+label, fieldset {
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 47%;
+    font-weight: bold;
+    margin: 10px;
+    align-items: center;
+
+}
+
+fieldset {
+
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 20px;
+
+}
+  
+input[type="text"], input[type="email"], input[type="tel"], textarea {
+
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    flex-basis: 100%;
+
+}
+
+textarea {
+
+    height: 140px;
+
+}
+
+#choice_label {
+
+    flex-basis: 95%;
+
+}
+
+fieldset > label {
+
+    flex-basis: 90%;
+
+}
+  
+input[type="radio"], input[type="checkbox"] {
+
+    flex-basis: 5%;
+
+}
+  
+input[type="submit"] {
+
+    width: 100%;
+    padding: 15px;
+    background-color: #EC9D03;
+    color: white;
+    border: none;
+    border-radius: 15px;
+    font-size: 1vw;
+    cursor: pointer;
+    margin-top: 20px;
 
 }
 
