--- a/Online/online.css
+++ b/Online/online.css
@@ -76,6 +76,14 @@ li {
     font-weight: 900;
     box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.25);
     cursor: pointer;
+    transition: ease-in-out 0.2s;
+
+}
+
+li:hover {
+
+    background-color: white;
+    transition: ease-in-out 0.2s;
 
 }
 
