--- a/Online/online.css
+++ b/Online/online.css
@@ -219,7 +219,7 @@ main > h1 {
 
 main > article {
 
-    width: 80%;
+    flex-basis: 80%;
     height: max-content;
     background-color: white;
     border-radius: 15px;
