--- a/Terrarium/terrarium.css
+++ b/Terrarium/terrarium.css
@@ -190,6 +190,7 @@ aside > img {
 main {
 
     background-color: #F4FFC6;
+    min-height: 83vh;
     width: calc(100% - 400px);
     display: flex;
     flex-wrap: wrap;
