--- a/Main/main.css
+++ b/Main/main.css
@@ -31,17 +31,16 @@ header {
     background-color: #468132;
     height: 200px;
     width: 100vw;
-    padding-left: 450px;
+    padding-left: 420px;
 
 }
 
-header > h1 {
+header > img {
 
-    font-size: 70px;
-    font-weight: 900;
-    min-width: 200px;
     border-right: 8px #0A0A0A solid;
     border-radius: 15px;
+    padding: 15px;
+    width: 500px;
 
 }
 
